@startuml

title __TEST1's Class Diagram__\n

  namespace com.juc.concurrency.test1 {
    class com.juc.concurrency.test1.MyClass {
        + hello()
        + world()
    }
  }
  

  namespace com.juc.concurrency.test1 {
    class com.juc.concurrency.test1.SynchrosizedTest2 {
        {static} + main()
    }
  }
  

  namespace com.juc.concurrency.test1 {
    class com.juc.concurrency.test1.Thread1 {
        + Thread1()
        + run()
    }
  }
  

  namespace com.juc.concurrency.test1 {
    class com.juc.concurrency.test1.Thread2 {
        + Thread2()
        + run()
    }
  }
  

  com.juc.concurrency.test1.Thread1 o-- com.juc.concurrency.test1.MyClass : myClass
  com.juc.concurrency.test1.Thread2 o-- com.juc.concurrency.test1.MyClass : myClass


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
